<resources>
    <string name="app_name">MenuProject</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="title_activity_new">NEW ACTIVITY</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="sms">SMS</string>
    <string name="phone">PHONE</string>
    <string name="web">WEB</string>
    <string name="map">MAP</string>
    <string name="share">SHARE</string>
</resources>
