<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorblueclair"
    tools:context="com.guette.menuproject.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:id="@+id/btnsms"
        android:background="@color/colorwhite"
        android:textColor="@color/colorblack"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/btnphone"
        android:background="@color/colorwhite"
        android:textColor="@color/colorblack"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignTop="@+id/btnsms"
        android:layout_alignBaseline="@id/btnsms"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web"
        android:background="@color/colorwhite"
        android:textColor="@color/colorblack"
        android:textStyle="bold"
        android:autoLink="web"
        android:layout_below="@+id/btnsms"
        android:id="@+id/btnweb"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:id="@+id/btnmap"
        android:background="@color/colorwhite"
        android:textColor="@color/colorblack"
        android:textStyle="bold"
        android:autoLink="map"
        android:layout_below="@+id/btnweb"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btnsms" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:background="@color/colorwhite"
        android:textColor="@color/colorblack"
        android:textStyle="bold"
        android:layout_below="@+id/btnweb"
        android:layout_marginTop="20dp"
        android:id="@+id/btnshare"
        android:layout_above="@+id/btnnewactivity"
        android:layout_alignStart="@+id/btnphone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_new"
        android:id="@+id/btnnewactivity"
        android:background="@color/colorwhite"
        android:textColor="@color/colorblack"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnmap"
        android:layout_alignEnd="@+id/btnweb" />

</RelativeLayout>
